--- a/index.html
+++ b/index.html
@@ -21,17 +21,20 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="alexgao.jpg" alt="300" width="266px" />&nbsp;</td>
-<td align="left"><p><br /> Yu Zhu, Ph.D. Candidate<br />
-School of Computer Science<br />
-<a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a><br /></p>
-<p>Joint student during Oct. 2012 - Nov. 2014<br />
-<a href="http://statistics.ucla.edu/">Department of Statistics</a><br />
-University of California, Los Angeles<br /></p>
-<p>Email:</p>
-<p>Advisor: Yanning Zhang, <a href="http://www.stat.ucla.edu/~yuille/">Alan L. Yuille</a></p>
+<td align="left"><p>Alex Gao<br />
+Henry M. Gunn High School<br />
+Class of 2018<br /></p>
+<p>Email: alex.gao@nasa.gov<br />
+Phone: (650) 690-6679<br />
+LinkedIn: <a href="https://www.linkedin.com/in/alexgaoo/">alexgaoo</a><br />
+GitHub: <a href="https://github.com/alexgaoo/">alexgaoo</a><br /></p>
+<p><a href="resumealexgao.pdf">Resume</a></p>
+</td></tr></table>
+<h1>About Me</h1>
+<p>I am currently an intern in the <a href="https://ti.arc.nasa.gov/">Intelligent Systems Division</a> at <a href="https://www.nasa.gov/centers/ames/home/">NASA Ames Research Center</a>.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-05-02 22:25:49 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-05-02 22:44:38 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
