--- a/research.html
+++ b/research.html
@@ -21,9 +21,18 @@
 </div>
 <h2>NASA Ames Research Center</h2>
 <h2>Stanford University</h2>
+<table class="imgtable"><tr><td>
+<img src="hopperenv.jpg" alt="" width="200px" />&nbsp;</td>
+<td align="left"><p><b>Coordinated Multi-Agent Control Utlizing Deep Reinforcement Learning</b><br />
+<i>Research conducted with <a href="kvfrans.com">Kevin Frans</a> and advised by Professor <a href="http://mykel.kochenderfer.com/">Mykel Kochenderfer</a> at Stanford University</i><br />
+We devised a novel deep reinforcement learning algorithm based off of the policy gradient method that tackles multi agent control.<br /></p>
+</td></tr></table>
+<div class="infoblock">
+<div class="blockcontent">
+</div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-05-02 22:44:37 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-05-02 23:08:57 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
