--- a/index.html
+++ b/index.html
@@ -30,11 +30,32 @@ LinkedIn: <a href="https://www.linkedin.com/in/alexgaoo/">alexgaoo</a><br />
 GitHub: <a href="https://github.com/alexgaoo/">alexgaoo</a><br /></p>
 <p><a href="resumealexgao.pdf">Resume</a></p>
 </td></tr></table>
-<h1>About Me</h1>
-<p>I am currently an intern in the <a href="https://ti.arc.nasa.gov/">Intelligent Systems Division</a> at <a href="https://www.nasa.gov/centers/ames/home/">NASA Ames Research Center</a>.</p>
+<h2>About Me</h2>
+<p>I am currently an intern in the <a href="https://ti.arc.nasa.gov/">Intelligent Systems Division</a> at <a href="https://www.nasa.gov/centers/ames/home/">NASA Ames Research Center</a>.
+I am also a researcher at the <a href="https://asl.stanford.edu">Autonomous Systems Laboratory</a> at Stanford University.
+Previously, I have worked on independent research with Professor <a href="http://mykel.kochenderfer.com/">Mykel Kochenderfer</a>, director of the <a href="http://web.stanford.edu/group/sisl/cgi-bin/wordpress/">Stanford Intelligent Systems Laboratory</a>.</p>
+<p>I founded and captain the <a href="https://gunnzerorobotics.github.io">Gunn Zero Robotics Team</a> which participates in the <a href="https://zerorobotics.mit.edu">Zero Robotics Competition</a>.
+We program flight plans and autonomous decision making for the SPHERE satellites on the International Space Station for an annual problem of interest to DARPA, NASA, and MIT.
+Additionally, I am a controls lead for the Gunn Robotics Team, which participates in the <a href="https://www.firstinspires.org/robotics/frc">FIRST Robotics Competition</a>.</p>
+<p>I was a controls engineer at <a href="http://rloop.org/">rLoop Inc</a>, which designed and manufactured a pod to compete in the <a href="http://www.spacex.com/hyperloop">SpaceX Hyperloop Competition</a>.
+We won first place internationally in January 2017.</p>
+<p>I have always been deeply passionate about space exploration, and I hope to utilize artificial intelligence to contribute to the field.</p>
+<h2>Research Interests</h2>
+<p>I am particularly interested in the fields of robotics and artificial intelligence, as well as aerospace and computer
+engineering.</p>
+<p>Specifically, my research lies among:</p>
+<ul>
+<li><p>Decision making under uncertainty</p>
+</li>
+<li><p>Autonomous control of space robots</p>
+</li>
+<li><p>Multi-agent control</p>
+</li>
+</ul>
+<h2>Publications</h2>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-05-02 22:44:38 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-05-02 23:32:44 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
