--- a/research.html
+++ b/research.html
@@ -19,8 +19,17 @@
 <div id="toptitle">
 <h1>Research</h1>
 </div>
-<h2>NASA Ames Research Center</h2>
+<h2>NASA Ames Research Center (January 2017 - Present)</h2>
+<table class="imgtable"><tr><td>
+<img src="rp.jpeg" alt="" width="200px" />&nbsp;</td>
+<td align="left"><p><b>SHERPA: Decision Making Under Uncertainty for the Resource Prospector Mission</b><br />
+<i>Research conducted with <a href="https://ti.arc.nasa.gov/profile/balaban/">Edward Balaban</a></i><br />
+Developed a decision-support system for the lunar rover aboard the Resource Prospector Mission</p>
+</td></tr></table>
 <h2>Stanford University</h2>
+<h3>Autonomous Systems Laboratory (June 2017 - TBD)</h3>
+<p><b>TBD</b></p>
+<h3>Independent Research (September 2016 - March 2017)</h3>
 <table class="imgtable"><tr><td>
 <img src="hopperenv.jpg" alt="" width="200px" />&nbsp;</td>
 <td align="left"><p><b>Coordinated Multi-Agent Control Utlizing Deep Reinforcement Learning</b><br />
@@ -32,7 +41,7 @@ We devised a novel deep reinforcement learning algorithm based off of the policy
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-05-02 23:08:57 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-05-03 13:40:32 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
