--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ engineering.</p>
 </li>
 </ul>
 <h2>Publications</h2>
-<p>AIAA Expected January 2018</p>
+<p>Paper accepted to the AIAA Space Conference January 2018</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-05-03 13:25:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-05-03 21:54:27 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
