--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ GitHub: <a href="https://github.com/alexgaoo/">alexgaoo</a><br /></p>
 <p>I am currently interning in the <a href="https://ti.arc.nasa.gov/">Intelligent Systems Division</a> at <a href="https://www.nasa.gov/centers/ames/home/">NASA Ames Research Center</a>.
 At NASA Ames, I'm working on a decision support system for the Resource Prospector mission lunar rover.
 I am also a researcher at the <a href="https://asl.stanford.edu">Autonomous Systems Laboratory</a> under Professor <a href="http://web.stanford.edu/~pavone/">Marco Pavone</a> at Stanford University.
-Previously, I have worked on independent research with Professor <a href="http://mykel.kochenderfer.com/">Mykel Kochenderfer</a>, director of the <a href="http://web.stanford.edu/group/sisl/cgi-bin/wordpress/">Stanford Intelligent Systems Laboratory</a>.</p>
+Previously, I have worked on research with Professor <a href="http://mykel.kochenderfer.com/">Mykel Kochenderfer</a>, director of the <a href="http://web.stanford.edu/group/sisl/cgi-bin/wordpress/">Stanford Intelligent Systems Laboratory</a>.</p>
 <p>I founded and captain the <a href="https://gunnzerorobotics.github.io">Gunn Zero Robotics Team</a> which participates in the <a href="https://zerorobotics.mit.edu">Zero Robotics Competition</a>.
 We program flight plans and autonomous decision making for the SPHERE satellites on the International Space Station for an annual problem of interest to DARPA, NASA, and MIT.
 Additionally, I am a controls lead for the Gunn Robotics Team, which participates in the <a href="https://www.firstinspires.org/robotics/frc">FIRST Robotics Competition</a>.</p>
@@ -58,7 +58,7 @@ engineering.</p>
 <p>Paper accepted to the AIAA Space Conference January 2018</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-05-03 21:54:27 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-05-03 21:59:00 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
