--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ engineering.</p>
 </li>
 </ul>
 <h2>Publications</h2>
-<p>Paper accepted to the AIAA Space Conference January 2018</p>
+<p>Paper accepted to AIAA Guidance, Navigation, and Control January 2018. To Appear. </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-05-04 09:46:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-05-04 19:34:43 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
