--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ GitHub: <a href="https://github.com/alexgaoo/">alexgaoo</a><br /></p>
 At NASA Ames, I'm working on a decision support system for the Resource Prospector mission lunar rover.
 I am also a researcher at the <a href="https://asl.stanford.edu">Autonomous Systems Laboratory</a> under Professor <a href="http://web.stanford.edu/~pavone/">Marco Pavone</a> at Stanford University.
 Previously, I have worked on research with Professor <a href="http://mykel.kochenderfer.com/">Mykel Kochenderfer</a>, director of the <a href="http://web.stanford.edu/group/sisl/cgi-bin/wordpress/">Stanford Intelligent Systems Laboratory</a>.</p>
-<p>I founded and captain the <a href="https://gunnzerorobotics.github.io">Gunn Zero Robotics Team</a> which participates in the <a href="https://zerorobotics.mit.edu">Zero Robotics Competition</a>.
+<p>I founded and currently captain the <a href="https://gunnzerorobotics.github.io">Gunn Zero Robotics Team</a> which participates in the <a href="https://zerorobotics.mit.edu">Zero Robotics Competition</a>.
 We program flight plans and autonomous decision making for the SPHERE satellites on the International Space Station for an annual problem of interest to DARPA, NASA, and MIT.
 Additionally, I am a controls lead for the Gunn Robotics Team, which participates in the <a href="https://www.firstinspires.org/robotics/frc">FIRST Robotics Competition</a>.</p>
 <p>I was a controls engineer at <a href="http://rloop.org/">rLoop Inc</a>, which designed and manufactured a pod to compete in the <a href="http://www.spacex.com/hyperloop">SpaceX Hyperloop Competition</a>.
-We won first place internationally in January 2017.</p>
+We won the Innovation Award internationally in January 2017.</p>
 <p>I have always been deeply passionate about space exploration, and I strive to utilize artificial intelligence to contribute to the field.</p>
 <p>On the side, I enjoy road cycling, cooking, and playing guitar and piano.</p>
 <h2>Research Interests</h2>
@@ -55,10 +55,10 @@ engineering.</p>
 </li>
 </ul>
 <h2>Publications</h2>
-<p>Paper accepted to AIAA Guidance, Navigation, and Control January 2018. To Appear. </p>
+<p>Paper accepted to AIAA Space, January 2018. To Appear.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-05-04 19:34:43 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-05-05 10:44:13 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
