--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Additionally, I am a controls lead for the Gunn Robotics Team, which participate
 <p>I was a controls engineer at <a href="http://rloop.org/">rLoop Inc</a>, which designed and manufactured a pod to compete in the <a href="http://www.spacex.com/hyperloop">SpaceX Hyperloop Competition</a>.
 We won the Innovation Award internationally in January 2017.</p>
 <p>I have always been deeply passionate about space exploration, and I strive to utilize artificial intelligence to contribute to the field.</p>
-<p>On the side, I enjoy road cycling, cooking, and playing guitar and piano.</p>
+<p>On the side, I enjoy road cycling, running, cooking, and playing guitar and piano.</p>
 <h2>Research Interests</h2>
 <p>I am particularly interested in the fields of robotics and artificial intelligence, as well as aerospace and computer
 engineering.</p>
@@ -54,10 +54,17 @@ engineering.</p>
 </li>
 </ul>
 <h2>Publications</h2>
-<p>Paper accepted to AIAA Space, January 2018. To Appear.</p>
+<ol>
+<li><p>Paper accepted to AIAA SciTech, January 2018</p>
+</li>
+<li><p>Internal NASA internship publication, August 2017</p>
+</li>
+<li><p>Manuscript in preparation for peer-reviewed journal 2018</p>
+</li>
+</ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-06-04 20:11:46 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-07-07 22:29:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
