--- a/research.html
+++ b/research.html
@@ -26,10 +26,7 @@
 <i>Research conducted with <a href="https://ti.arc.nasa.gov/profile/balaban/">Edward Balaban</a></i><br />
 Developed a decision-support system for the lunar rover aboard the Resource Prospector Mission</p>
 </td></tr></table>
-<h2>Stanford University</h2>
-<h3>Autonomous Systems Laboratory (June 2017 - TBD)</h3>
-<p><b>TBD</b></p>
-<h3>Independent Research (September 2016 - March 2017)</h3>
+<h2>Stanford University (September 2016 - March 2017)</h2>
 <table class="imgtable"><tr><td>
 <img src="hopperenv.jpg" alt="" width="200px" />&nbsp;</td>
 <td align="left"><p><b>Coordinated Multi-Agent Control Utlizing Deep Reinforcement Learning</b><br />
@@ -41,7 +38,7 @@ We devised a novel deep reinforcement learning algorithm based off of the policy
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-06-04 20:11:48 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-07-07 22:26:08 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
