--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@ engineering.</p>
 </ul>
 <h2>Publications</h2>
 <ol>
-<li><p>Paper accepted to AIAA SciTech, January 2018</p>
+<li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson, M. Kochenderfer, &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;, <i>AIAA Science and Technology Forum, Intelligent Systems: Integrated Systems Health Management (ISHM)</i>, January 2018. To Appear.</p>
 </li>
-<li><p>Internal NASA internship publication, August 2017</p>
+<li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson, M. Kochenderfer, &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;. <i>Manuscript in preparation.</i></p>
 </li>
-<li><p>Manuscript in preparation for peer-reviewed journal 2018</p>
+<li><p>A. Gao, &ldquo;Development of a Real-Time Decision Support System&rdquo;, <i>NASA Ames Research Center Internal Publication</i>, August 2017.</p>
 </li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-07-07 22:29:35 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-07-08 22:00:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
