--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@ Class of 2018<br /></p>
 Phone: (650) 690-6679<br />
 LinkedIn: <a href="https://www.linkedin.com/in/alexgaoo/">alexgaoo</a><br />
 GitHub: <a href="https://github.com/alexgaoo/">alexgaoo</a><br /></p>
-<p><a href="resumealexgao.pdf">Resume</a></p>
 </td></tr></table>
 <h2>About Me</h2>
 <p>I am currently interning in the <a href="https://ti.arc.nasa.gov/">Intelligent Systems Division</a> at <a href="https://www.nasa.gov/centers/ames/home/">NASA Ames Research Center</a>.
@@ -55,16 +54,16 @@ engineering.</p>
 </ul>
 <h2>Publications</h2>
 <ol>
-<li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson, M. Kochenderfer, &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;, <i>AIAA Science and Technology Forum, Intelligent Systems: Integrated Systems Health Management (ISHM)</i>, January 2018. To Appear.</p>
+<li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;, <i>AIAA Science and Technology Forum, Intelligent Systems: Integrated Systems Health Management (ISHM)</i>, January 2018. To Appear.</p>
 </li>
-<li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson, M. Kochenderfer, &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;. <i>Manuscript in preparation.</i></p>
+<li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson, M. Kochenderfer, &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;. <i>Manuscript in preparation for AIAA Journal for Aerospace Information Systems.</i></p>
 </li>
-<li><p>A. Gao, &ldquo;Development of a Real-Time Decision Support System&rdquo;, <i>NASA Ames Research Center Internal Publication</i>, August 2017.</p>
+<li><p>A. Gao, &ldquo;Development of a Real-Time Decision Support System&rdquo;, <i>NASA</i>, August 2017.</p>
 </li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-07-08 22:00:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-09-18 19:02:04 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
