--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
 <img src="rp.jpeg" alt="" width="200px" />&nbsp;</td>
 <td align="left"><p><b>SHERPA: Decision Making Under Uncertainty for the Resource Prospector Mission</b><br />
 <i>Research conducted with <a href="https://ti.arc.nasa.gov/profile/balaban/">Edward Balaban</a></i><br />
-Developed a decision-support system for the lunar rover aboard the Resource Prospector Mission</p>
+Helped develop a decision-support system for the lunar rover aboard the Resource Prospector Mission.</p>
 </td></tr></table>
 <h2>Stanford University (February 2016 - March 2017)</h2>
 <table class="imgtable"><tr><td>
@@ -33,12 +33,9 @@ Developed a decision-support system for the lunar rover aboard the Resource Pros
 <i>Research conducted with <a href="kvfrans.com">Kevin Frans</a> and advised by Professor <a href="http://mykel.kochenderfer.com/">Mykel Kochenderfer</a> at Stanford University</i><br />
 We devised a novel deep reinforcement learning algorithm based off of the policy gradient method that tackles multi agent control.<br /></p>
 </td></tr></table>
-<div class="infoblock">
-<div class="blockcontent">
-</div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-07-08 22:09:21 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-09-18 19:03:12 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
