--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ engineering.</p>
 </ul>
 <h2>Publications</h2>
 <ol>
-<li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;, <i>AIAA Science and Technology Forum, Intelligent Systems: Integrated Systems Health Management (ISHM)</i>, January 2018. To Appear.</p>
+<li><p>E. Balaban, T. Arnon, M. Shirley, S. Brisson, A. Gao, &ldquo;System Health Aware POMDP Framework for Planetary Rover Traverse Evaluation and Refinement,&rdquo; /AIAA Science and Technology Forum, Intelligent Systems, Kissimmee FL, January 2018. To Appear.</p>
 </li>
 <li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson, M. Kochenderfer, &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;. <i>Manuscript in preparation for AIAA Journal for Aerospace Information Systems.</i></p>
 </li>
@@ -63,7 +63,7 @@ engineering.</p>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-09-18 19:02:04 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-11-06 17:06:42 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
