--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ GitHub: <a href="https://github.com/alexgaoo/">alexgaoo</a><br /></p>
 </td></tr></table>
 <h2>About Me</h2>
 <p>I am currently interning in the <a href="https://ti.arc.nasa.gov/">Intelligent Systems Division</a> at <a href="https://www.nasa.gov/centers/ames/home/">NASA Ames Research Center</a>.
-At NASA Ames, I'm working on a decision support system for the Resource Prospector mission lunar rover.
-Previously, I have worked on research with Professor <a href="http://mykel.kochenderfer.com/">Mykel Kochenderfer</a>, director of the <a href="http://web.stanford.edu/group/sisl/cgi-bin/wordpress/">Stanford Intelligent Systems Laboratory</a>.</p>
+At NASA Ames, I'm working on artificial intelligence and decision-making under uncertainty research for the Resource Prospector mission lunar rover and other robotic spacecraft missions.
+Previously, I have worked on multi-agent robot control research with Professor <a href="http://mykel.kochenderfer.com/">Mykel Kochenderfer</a>, director of the <a href="http://web.stanford.edu/group/sisl/cgi-bin/wordpress/">Stanford Intelligent Systems Laboratory</a>.</p>
 <p>I founded and currently captain the <a href="https://gunnzerorobotics.github.io">Gunn Zero Robotics Team</a> which participates in the <a href="https://zerorobotics.mit.edu">Zero Robotics Competition</a>.
 We program flight plans and autonomous decision making for the SPHERE satellites on the International Space Station for an annual problem of interest to DARPA, NASA, and MIT.
-Additionally, I am a controls lead for the Gunn Robotics Team, which participates in the <a href="https://www.firstinspires.org/robotics/frc">FIRST Robotics Competition</a>.</p>
+Additionally, I was a controls lead for the Gunn Robotics Team, which participates in the <a href="https://www.firstinspires.org/robotics/frc">FIRST Robotics Competition</a>.</p>
 <p>I was a controls engineer at <a href="http://rloop.org/">rLoop Inc</a>, which designed and manufactured a pod to compete in the <a href="http://www.spacex.com/hyperloop">SpaceX Hyperloop Competition</a>.
 We won the Innovation Award internationally in January 2017.</p>
 <p>I have always been deeply passionate about space exploration, and I strive to utilize artificial intelligence to contribute to the field.</p>
@@ -54,7 +54,7 @@ engineering.</p>
 </ul>
 <h2>Publications</h2>
 <ol>
-<li><p>E. Balaban, T. Arnon, M. Shirley, S. Brisson, A. Gao, &ldquo;System Health Aware POMDP Framework for Planetary Rover Traverse Evaluation and Refinement,&rdquo; /AIAA Science and Technology Forum, Intelligent Systems, Kissimmee FL, January 2018. To Appear.</p>
+<li><p>E. Balaban, T. Arnon, M. Shirley, S. Brisson, A. Gao, &ldquo;System Health Aware POMDP Framework for Planetary Rover Traverse Evaluation and Refinement,&rdquo; <i>AIAA Science and Technology Forum, Intelligent Systems,</i> Kissimmee FL, January 2018. To Appear.</p>
 </li>
 <li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson, M. Kochenderfer, &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;. <i>Manuscript in preparation for AIAA Journal for Aerospace Information Systems.</i></p>
 </li>
@@ -63,7 +63,7 @@ engineering.</p>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-11-06 17:06:42 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2017-11-06 17:08:32 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
