--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <td align="left"><p>Alex Gao<br />
 Henry M. Gunn High School<br />
 Class of 2018<br /></p>
-<p>Email: alex.gao@nasa.gov<br />
+<p>Email: alexgao12@gmail.com<br />
 Phone: (650) 690-6679<br />
 LinkedIn: <a href="https://www.linkedin.com/in/alexgaoo/">alexgaoo</a><br />
 GitHub: <a href="https://github.com/alexgaoo/">alexgaoo</a><br /></p>
@@ -54,7 +54,9 @@ engineering.</p>
 </ul>
 <h2>Publications</h2>
 <ol>
-<li><p>E. Balaban, T. Arnon, M. Shirley, S. Brisson, A. Gao, &ldquo;System Health Aware POMDP Framework for Planetary Rover Traverse Evaluation and Refinement,&rdquo; <i>AIAA Science and Technology Forum, Intelligent Systems,</i> Kissimmee FL, January 2018. To Appear.</p>
+<li><p>E. Balaban, T. Arnon, A. Gao, M. Shirley, S. Brisson, M. Kochenderfer, &ldquo;Realtime Traverse Synthesis for Planetary Rovers Under State and Execution Uncertainty,&rdquo; /AIAA Space and Astronautics Conference, Orlando FL, September 2018.</p>
+</li>
+<li><p>E. Balaban, T. Arnon, M. Shirley, S. Brisson, A. Gao, &ldquo;System Health Aware POMDP Framework for Planetary Rover Traverse Evaluation and Refinement,&rdquo; <i>AIAA Science and Technology Forum, Intelligent Systems,</i> Kissimmee FL, January 2018.</p>
 </li>
 <li><p>E. Balaban, T. Arnon, A. Gao, S. Brisson, M. Kochenderfer, &ldquo;System Health Enabled Realtime Planning Advisor (SHERPA)&rdquo;. <i>Manuscript in preparation for AIAA Journal for Aerospace Information Systems.</i></p>
 </li>
@@ -63,7 +65,7 @@ engineering.</p>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-11-06 17:08:32 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-04-23 09:05:45 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
