--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ engineering.</p>
 </ul>
 <h2>Publications</h2>
 <ol>
-<li><p>E. Balaban, T. Arnon, A. Gao, M. Shirley, S. Brisson, M. Kochenderfer, &ldquo;Realtime Traverse Synthesis for Planetary Rovers Under State and Execution Uncertainty,&rdquo; /AIAA Space and Astronautics Conference, Orlando FL, September 2018.</p>
+<li><p>E. Balaban, T. Arnon, A. Gao, M. Shirley, S. Brisson, M. Kochenderfer, &ldquo;Realtime Traverse Synthesis for Planetary Rovers Under State and Execution Uncertainty,&rdquo; <i>AIAA Space and Astronautics Conference,</i> Orlando FL, September 2018.</p>
 </li>
 <li><p>E. Balaban, T. Arnon, M. Shirley, S. Brisson, A. Gao, &ldquo;System Health Aware POMDP Framework for Planetary Rover Traverse Evaluation and Refinement,&rdquo; <i>AIAA Science and Technology Forum, Intelligent Systems,</i> Kissimmee FL, January 2018.</p>
 </li>
@@ -65,7 +65,7 @@ engineering.</p>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-04-23 09:05:45 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-04-23 09:06:41 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
