--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
 <table class="imgtable"><tr><td>
 <img src="alexgao.jpg" alt="300" width="266px" />&nbsp;</td>
 <td align="left"><p>Alex Gao<br />
-Henry M. Gunn High School<br />
-Class of 2018<br /></p>
-<p>Email: alexgao12@gmail.com<br />
+University of California Berkeley<br />
+B.S. Electrical Engineering and Computer Science, 2022<br /></p>
+<p>Email: alex.gao@jpl.nasa.gov<br />
 Phone: (650) 690-6679<br />
 LinkedIn: <a href="https://www.linkedin.com/in/alexgaoo/">alexgaoo</a><br />
 GitHub: <a href="https://github.com/alexgaoo/">alexgaoo</a><br /></p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am currently interning in the <a href="https://ti.arc.nasa.gov/">Intelligent Systems Division</a> at <a href="https://www.nasa.gov/centers/ames/home/">NASA Ames Research Center</a>.
-At NASA Ames, I'm working on artificial intelligence and decision-making under uncertainty research for the Resource Prospector mission lunar rover and other robotic spacecraft missions.
+<p>I am interning at the <a href="https://www.jpl.nasa.gov/">NASA Jet Propulsion Laboratory</a>, working on a lunar and ocean world seismometer to detect quark nuggets.</p>
+<p>I interned in the <a href="https://ti.arc.nasa.gov/">Intelligent Systems Division</a> at <a href="https://www.nasa.gov/centers/ames/home/">NASA Ames Research Center</a>.
+At NASA Ames, I worked on artificial intelligence and decision-making under uncertainty research for the Resource Prospector mission lunar rover and other robotic spacecraft missions.
 Previously, I have worked on multi-agent robot control research with Professor <a href="http://mykel.kochenderfer.com/">Mykel Kochenderfer</a>, director of the <a href="http://web.stanford.edu/group/sisl/cgi-bin/wordpress/">Stanford Intelligent Systems Laboratory</a>.</p>
-<p>I founded and currently captain the <a href="https://gunnzerorobotics.github.io">Gunn Zero Robotics Team</a> which participates in the <a href="https://zerorobotics.mit.edu">Zero Robotics Competition</a>.
+<p>I founded and captained the <a href="https://gunnzerorobotics.github.io">Gunn Zero Robotics Team</a> which participates in the <a href="https://zerorobotics.mit.edu">Zero Robotics Competition</a>.
 We program flight plans and autonomous decision making for the SPHERE satellites on the International Space Station for an annual problem of interest to DARPA, NASA, and MIT.
 Additionally, I was a controls lead for the Gunn Robotics Team, which participates in the <a href="https://www.firstinspires.org/robotics/frc">FIRST Robotics Competition</a>.</p>
 <p>I was a controls engineer at <a href="http://rloop.org/">rLoop Inc</a>, which designed and manufactured a pod to compete in the <a href="http://www.spacex.com/hyperloop">SpaceX Hyperloop Competition</a>.
@@ -65,7 +66,7 @@ engineering.</p>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-04-23 09:06:41 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-06-24 18:00:11 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
